# win32k-research-toolkit

./: .gitignore  CMakeLists.txt  README.md  build.bat
AudioDGFuzz/: CMakeLists.txt  README.md
AudioDGFuzz/probes/: APO_chain.yml  IAudioClient_buffer.yml  IAudioClient_init.yml  WAVEFORMATEX_negotiation.yml
AudioDGFuzz/src/: main.cpp
AudioDGFuzz/src/com/: apo_harness.cpp  apo_harness.hpp  wasapi_client.cpp  wasapi_client.hpp
AudioDGFuzz/src/config/: probe_loader.cpp  probe_loader.hpp
AudioDGFuzz/src/monitor/: audiodg_monitor.cpp  audiodg_monitor.hpp
AudioDGFuzz/src/mutator/: format_mutator.cpp  format_mutator.hpp  pcm_mutator.cpp  pcm_mutator.hpp
AudioDGFuzz/src/verdict/: classifier.cpp  classifier.hpp
W32KFuzz/: CMakeLists.txt  README.md
W32KFuzz/probes/: NtGdiExtTextOutW.yml  NtGdiExtTextOutW_truncation.yml  NtUserTransformPoint.yml
W32KFuzz/src/: main.cpp
W32KFuzz/src/caller/: syscall_stub.hpp
W32KFuzz/src/config/: probe_loader.hpp
W32KFuzz/src/monitor/: spy_bridge.hpp
W32KFuzz/src/mutator/: smart_mutator.hpp
W32KFuzz/src/verdict/: classifier.hpp
W32KSpy/: CMakeLists.txt
W32KSpy/src/: main.cpp
W32KSpy/src/etw/: etw_consumer.hpp  etw_session.hpp
W32KSpy/src/filter/: interest_filter.hpp
W32KSpy/src/hooks/: iat_hook.hpp  inline_hook.hpp  instrumentation_cb.hpp  syscall_monitor.hpp
W32KSpy/src/ui/: tui.hpp
